Fix main controls buttons overflowing

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -56,11 +56,9 @@
 @media (min-width: 700px){
   #root{
     grid-template-columns: 3dvw 32dvw 60dvw;
-    grid-template-rows: 60px repeat(3, min-content);
+    grid-template-rows: 60px min-content;
     grid-template-areas:
     "logo controls preview"
-    "nav edit preview"
-    "nav edit preview"
     "nav edit preview";
     padding: 1dvw;
     gap: 1dvw;
