--- a/src/styles/FormButton.css
+++ b/src/styles/FormButton.css
@@ -1,7 +1,7 @@
 .form-button{
     will-change: filter;
     padding: 5px;
-    min-width: 90px;
+    min-width: 20%;
     border-radius: 5px;
     cursor: pointer;
     transition-duration: 200ms;
